--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <div class="title">До выхода Финальной Формы осталось:</div>
         <div class="countdown" id="countdown"></div>
     </header>
+
+<nav class="index-nav">
+            <ul>
+                <li><a href="index.html">Таймер</a></li>
+                <li><a href="lore.html">Лор</a></li>
+            </ul>
+        </nav>
     <footer>
         <div class="countdown" id="countdown_footer"></div>
     </footer>
