--- a/Lore.html
+++ b/Lore.html
@@ -15,7 +15,7 @@
             margin: -600px auto 0; /* Центрирование текста по горизонтали и поднятие вверх */
             max-width: 800px; /* Максимальная ширина текста */
             font-family: 'Intro', sans-serif; /* Используем шрифт Intro */
-            color: purple; /* Цвет текста */
+            color: black; /* Цвет текста */
             padding: 0 20px; /* Добавляем отступы слева и справа */
             margin-right: 200px; /* Сдвигаем текст вправо на 20px */
             font-size: 24px;
@@ -35,7 +35,7 @@
         </div>
         <div class="lore-text">
             <p>
-                Орикс, Одержимый король (ориг. Oryx, the Taken King), рожденный под именем Аураш (ориг. Aurash) и ранее известный как Аурикс (ориг. Auryx) (что означает "Долгая мысль") — является властелином Осмиевого трона, богом-королем Улья и повелителем Одержимых. ЕГО ЗАЕБАШИЛИ СТРАЖИ STASSOLO2802 И PURPLESTRAZHMISTERWOLFMEGA
+                Орикс, Одержимый король (ориг. Oryx, the Taken King), рожденный под именем Аураш (ориг. Aurash) и ранее известный как Аурикс (ориг. Auryx) (что означает "Долгая мысль") — является властелином Осмиевого трона, богом-королем Улья и повелителем Одержимых. ЕГО ЗАЕБАШИЛИ СТРАЖИ STASSOLO2802, PURPLESTRAZHMISTERWOLFMEGA И timofeysolo2802
             </p>
             <p>
                 Возрожденный из самой Тьмы посредством договора с червебогами. Орикс, вместе со своими сестрами Саватун, Королевой-ведьмой и Зиву Арат, Богиней войны, стали основателями новой расы Улья и источником их ужасной силы. Из всех богов Улья, только Орикс обладает властью подчинять другие расы своей воле, создавая одержимых. Орикс также является отцом Кроты, смертоносного принца Улья, который убил тысячи Стражей во время Великой катастрофы; и Нокриса, отчужденного первенца, а после - глашатая червебога Зола, Повелителя тысяч армий.
