--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div class="title">До выхода Финальной Формы осталось:</div>
+        <div class="title">До выхода Финальной Формы осталось:(тимохе привет)</div>
         <div class="countdown" id="countdown"></div>
     </header>
 
