--- a/Lore.html
+++ b/Lore.html
@@ -28,6 +28,7 @@
             <ul>
                 <li><a href="index.html">Таймер</a></li>
                 <li><a href="lore.html">Лор</a></li>
+                <li><a href="servers_off.html">Серверы-off</a></li>
             </ul>
         </nav>
         <div class="animation-container">
